# pushnav

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml
camera/linux/: Makefile  camera_server.c
camera/mac/: Package.swift
camera/windows/: build.bat  camera_server.c
data/: VERSION.json
data/catalogs/hyg/: NOTICE
data/catalogs/openngc/: NOTICE
data/web/: index.html
docs/: 3d-models.md  _config.yml  design.md  diy-notes.md  hardware.md  index.md  install.md  license.md  rpi-headless.md  skysafari-setup.md  stellarium-setup.md  using-pushnav.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-16-lx200-implementation.md  2026-05-06-react-ui-pivot.md  2026-05-17-rpi-headless.md  2026-05-18-tetra3rs-port.md
docs/superpowers/specs/: 2026-04-16-lx200-implementation-design.md  2026-05-17-rpi-headless-design.md  2026-05-18-tetra3rs-bench-findings.md
hardware/3d_models/: README.md  housing.scad  housing_v2.scad  laser_pointer.scad
hardware/3d_models/stls/: housing_base_bolt.stl  housing_base_selftap.stl  housing_cap.stl  housing_hood.stl  housing_v2_cap.stl  laser_pointer.stl  lock_ring.stl
linux/: pushnav.desktop
overrides/: main.html
python/evf/: __init__.py  main.py  network.py  paths.py
python/evf/camera/: client.py  protocol.py  subprocess_mgr.py
python/evf/config/: logging_setup.py  manager.py
python/evf/engine/: audio.py  clock.py  engine.py  epoch.py  frame_buffer.py  goto_target.py  (+4 more)
scripts/: bench_solvers.py  build_camera_mac.sh  build_catalogs.py  build_linux.sh  build_mac.sh  build_tetra3rs_catalog.py  build_windows.bat  dmgbuild_settings.py  pushnav.iss  run_dev.sh  run_dev_linux.sh  run_dev_windows.bat  run_mock_camera.sh  sync_catalog.py  test_stellarium_live.py
specs/start/: ACCEPTANCE_TESTS.md  SPEC_ARCHITECTURE.md  SPEC_BUILD_RELEASE.md  SPEC_PRODUCT.md  SPEC_PROTOCOL_CAMERA.md  SPEC_PROTOCOL_LX200.md  SPEC_PROTOCOL_STELLARIUM.md  SPEC_SOLVER_PERFORMANCE.md
tests/: conftest.py  mock_camera_server.py  test_audio.py  test_build_catalogs.py  test_camera.py  test_config_location.py  test_engine_location.py  test_epoch.py  test_lx200_protocol.py  test_lx200_server.py  test_navigation.py  test_offline_full.py  test_phase1.py  test_solver_offline.py  test_stellarium.py  test_subprocess_mgr.py  test_sync.py  test_webserver_api.py  test_webserver_mjpeg.py  test_webserver_payload.py
tests/fixtures/: hyg_sample.csv  openngc_sample.csv
web/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
(+60 files in other folders)
