[project]
name = "evf"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "dearpygui",
    "Pillow",
    "numpy",
    "scipy",
    "tetra3",
    "playsound3",
    "aiohttp",
    "qrcode[pil]",
    "pyerfa>=2.0.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.0.2",
    "pytest",
    "pytest-asyncio>=0.23",
]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/evf"]

[tool.uv.sources]
tetra3 = { path = "python/vendor/tetra3", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
