[project]
name = "evf"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "Pillow",
    "numpy",
    "scipy",
    "tetra3rs==0.7.1",
    "playsound3",
    "aiohttp",
    "qrcode[pil]",
    "pyerfa>=2.0.0",
    "pywebview>=5.0",
    # Linux: pull QtPy + PyQt6 + PyQt6-WebEngine. pywebview's GTK backend
    # would need PyGObject + WebKit2GTK from system packages (apt) and
    # forces a --system-site-packages venv that fights the repo's
    # .python-version pin. Qt is pip-installable, uses uv-managed Python,
    # and QtWebEngine renders MJPEG natively (no polling fallback needed).
    "pywebview[qt]>=5.0 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "nuitka>=4.0.2",
    "pytest",
    "pytest-asyncio>=0.23",
    "gaia-catalog",
    # macOS DMG layout (writes .DS_Store directly via ds-store + mac-alias —
    # avoids the Sequoia AppleScript / Finder Automation regression that
    # breaks create-dmg's icon positioning). macOS-only at runtime.
    "dmgbuild>=1.6.5; sys_platform == 'darwin'",
]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/evf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
